storage for group

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -65,7 +65,23 @@
   "storage": {
     "imagestorage": {
       "service": "S3",
-      "providerPlugin": "awscloudformation"
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "amplifyapp5bc556bb",
+          "attributes": [
+            "UserPoolId"
+          ]
+        },
+        {
+          "category": "auth",
+          "resourceName": "userPoolGroups",
+          "attributes": [
+            "adminGroupRole"
+          ]
+        }
+      ]
     }
   },
   "function": {
